--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Piano lessons in Oakville"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
     <title>Melody Piano Studio</title>
   </head>
